库/XCGUI/xcgui.h

typedef  __int64  vint;
typedef  int      vint;
typedef void* HXCGUI;       
enum   menu_item_flag_  
{
	menu_item_flag_normal = 0x00,   
	menu_item_flag_select = 0x01,   
	menu_item_flag_stay = 0x01,    
	menu_item_flag_check = 0x02,   
	menu_item_flag_popup = 0x04,   
	menu_item_flag_separator = 0x08,   
	menu_item_flag_disable = 0x10,   
};
enum  menu_popup_position_  
{
	menu_popup_position_left_top = 0,      
	menu_popup_position_left_bottom,     
	menu_popup_position_right_top,       
	menu_popup_position_right_bottom,    
	menu_popup_position_center_left,     
	menu_popup_position_center_top,      
	menu_popup_position_center_right,    
	menu_popup_position_center_bottom,   
};
enum  image_draw_type_  
{
	image_draw_type_default = 0,     
	image_draw_type_stretch,       
	image_draw_type_adaptive,      
	image_draw_type_tile,          
	image_draw_type_fixed_ratio,   
	image_draw_type_adaptive_border,  
};
enum  common_state3_   
{
	common_state3_leave = 0,  
	common_state3_stay,     
	common_state3_down,     
};
enum  list_item_state_   
{
	list_item_state_leave = 0,   
	list_item_state_stay = 1,    
	list_item_state_select = 2,  
	list_item_state_cache = 3,   
};
enum  tree_item_state_  
{
	tree_item_state_leave = 0,   
	tree_item_state_stay = 1,    
	tree_item_state_select = 2,  
};
enum  messageBox_flag_  
{
	messageBox_flag_other = 0x00,    
	messageBox_flag_ok = 0x01,    
	messageBox_flag_cancel = 0x02,    
	messageBox_flag_icon_appicon = 0x01000,  
	messageBox_flag_icon_info = 0x02000,  
	messageBox_flag_icon_qustion = 0x04000,  
	messageBox_flag_icon_error = 0x08000,  
	messageBox_flag_icon_warning = 0x10000,  
	messageBox_flag_icon_shield = 0x20000,  
};
enum pane_align_  
{
	pane_align_error = -1,  
	pane_align_left = 0,    
	pane_align_top,       
	pane_align_right,     
	pane_align_bottom,    
	pane_align_center,    
};
enum  layout_align_  
{
	layout_align_left = 0,		  
	layout_align_top,			  
	layout_align_right,			  
	layout_align_bottom,		  
	layout_align_center,		  
	layout_align_equidistant,     
};
enum  layout_size_ 
{
	layout_size_fixed = 0, 
	layout_size_fill,      
	layout_size_auto,      
	layout_size_weight,    
	layout_size_percent,   
	layout_size_disable,   
};
enum layout_align_axis_  
{
	layout_align_axis_auto = 0,   
	layout_align_axis_start,      
	layout_align_axis_center,     
	layout_align_axis_end,        
};
enum edit_textAlign_flag_ 
{
	edit_textAlign_flag_left = 0x0,   
	edit_textAlign_flag_right = 0x1,   
	edit_textAlign_flag_center = 0x2,   
	edit_textAlign_flag_top = 0x0,  
	edit_textAlign_flag_bottom = 0x4,  
	edit_textAlign_flag_center_v = 0x8,  
};
enum pane_state_  
{
	pane_state_error = -1,
	pane_state_any = 0,
	pane_state_lock,   
	pane_state_dock,   
	pane_state_float,  
};
enum  textFormatFlag_  
{
	textAlignFlag_left = 0,      
	textAlignFlag_top = 0,      
	textAlignFlag_left_top = 0x4000, 
	textAlignFlag_center = 0x1,    
	textAlignFlag_right = 0x2,    
	textAlignFlag_vcenter = 0x4,    
	textAlignFlag_bottom = 0x8,    
	textFormatFlag_DirectionRightToLeft = 0x10,   
	textFormatFlag_NoWrap = 0x20,   
	textFormatFlag_DirectionVertical = 0x40,   
	textFormatFlag_NoFitBlackBox = 0x80,   
	textFormatFlag_DisplayFormatControl = 0x100,  
	textFormatFlag_NoFontFallback = 0x200,      
	textFormatFlag_MeasureTrailingSpaces = 0x400, 
	textFormatFlag_LineLimit = 0x800,      
	textFormatFlag_NoClip = 0x1000,     
	textTrimming_Character = 0x40000,          
	textTrimming_Word = 0x80000,  
	textTrimming_EllipsisCharacter = 0x8000,   
	textTrimming_EllipsisWord = 0x10000,  
	textTrimming_EllipsisPath = 0x20000,  
};
enum XC_DWRITE_RENDERING_MODE  
{
	XC_DWRITE_RENDERING_MODE_DEFAULT = 0,                    
	XC_DWRITE_RENDERING_MODE_ALIASED,						 
	XC_DWRITE_RENDERING_MODE_CLEARTYPE_GDI_CLASSIC,			 
	XC_DWRITE_RENDERING_MODE_CLEARTYPE_GDI_NATURAL,			 
	XC_DWRITE_RENDERING_MODE_CLEARTYPE_NATURAL,				 
	XC_DWRITE_RENDERING_MODE_CLEARTYPE_NATURAL_SYMMETRIC,	 
	XC_DWRITE_RENDERING_MODE_OUTLINE,                        
};
enum listItemTemp_type_  
{
	listItemTemp_type_tree = 0x01,					  
	listItemTemp_type_listBox = 0x02,				  
	listItemTemp_type_list_head = 0x04,				  
	listItemTemp_type_list_item = 0x08,				  
	listItemTemp_type_listView_group = 0x10,		  
	listItemTemp_type_listView_item = 0x20,			  
	listItemTemp_type_list = listItemTemp_type_list_head | listItemTemp_type_list_item,  
	listItemTemp_type_listView = listItemTemp_type_listView_group | listItemTemp_type_listView_item, 
};
enum monthCal_button_type_  
{
	monthCal_button_type_today = 0,  
	monthCal_button_type_last_year,  
	monthCal_button_type_next_year,  
	monthCal_button_type_last_month, 
	monthCal_button_type_next_month, 
};
enum fontStyle_  
{
	fontStyle_regular = 0,     
	fontStyle_bold = 1,        
	fontStyle_italic = 2,      
	fontStyle_boldItalic = 3,  
	fontStyle_underline = 4,   
	fontStyle_strikeout = 8    
};
enum  notifyMsg_skin_  
{
	notifyMsg_skin_no,         
	notifyMsg_skin_success,    
	notifyMsg_skin_warning,	   
	notifyMsg_skin_message,	   
	notifyMsg_skin_error,	   
};
enum  window_state_flag_  
{
	window_state_flag_nothing = 0x0000,  
	window_state_flag_leave = 0x0001,  
	window_state_flag_body_leave = 0x0002,  
	window_state_flag_top_leave = 0x0004,  
	window_state_flag_bottom_leave = 0x0008,  
	window_state_flag_left_leave = 0x0010,  
	window_state_flag_right_leave = 0x0020,  
	window_state_flag_layout_body = 0x20000000, 
};
enum  element_state_flag_  
{
	element_state_flag_nothing = window_state_flag_nothing,  
	element_state_flag_enable = 0x0001,  
	element_state_flag_disable = 0x0002,  
	element_state_flag_focus = 0x0004,  
	element_state_flag_focus_no = 0x0008,  
	element_state_flag_focusEx = 0x40000000,  
	element_state_flag_focusEx_no = 0x80000000,  
	layout_state_flag_layout_body = window_state_flag_layout_body, 
	element_state_flag_leave = 0x0010,
	element_state_flag_stay = 0x0020,
	element_state_flag_down = 0x0040,
};
enum monthCal_state_flag_     
{
	monthCal_state_flag_leave = element_state_flag_leave,  
	monthCal_state_flag_item_leave = 0x0080,     
	monthCal_state_flag_item_stay = 0x0100,     
	monthCal_state_flag_item_down = 0x0200,     
	monthCal_state_flag_item_select = 0x0400,     
	monthCal_state_flag_item_select_no = 0x0800,     
	monthCal_state_flag_item_today = 0x1000,     
	monthCal_state_flag_item_last_month = 0x2000,     
	monthCal_state_flag_item_cur_month = 0x4000,     
	monthCal_state_flag_item_next_month = 0x8000,     
};
struct listBox_item_info_
{
	vint    nUserData;  
	int     nHeight;    
	int     nSelHeight; 
};
struct  listView_item_id_
{
	int  iGroup;   
	int  iItem;    
};
struct list_item_
{
	int     index;             
	int     iSubItem;          
	vint    nUserData;         
	list_item_state_  nState;  
	RECT    rcItem;     
	HELE    hLayout;    
	HTEMP   hTemp;      
};
struct list_header_item_
{
	int     index;           
	vint    nUserData;       
	BOOL    bSort;           
	int     nSortType;       
	int     iColumnAdapter;  
	common_state3_  nState;  
	RECT    rcItem;        
	HELE    hLayout;       
	HTEMP   hTemp;         
};
struct tree_item_
{
	int     nID;				 
	int     nDepth;				 
	int     nHeight;			 
	int     nSelHeight;			 
	vint    nUserData;			 
	BOOL    bExpand;			 
	tree_item_state_  nState;	 
	RECT    rcItem;              
	HELE    hLayout;             
	HTEMP   hTemp;               
};
struct listView_item_
{
	int     iGroup;            
	int     iItem;             
	vint    nUserData;         
	list_item_state_  nState;  
	RECT    rcItem;            
	HELE    hLayout;           
	HTEMP   hTemp;             
};
struct  font_info_
{
	int   nSize;                 
	int   nStyle;                
	wchar_t  name[LF_FACESIZE];  
};
typedef vint(CALLBACK* funCallUiThread)(vint data);
XC_API int WINAPI XC_UnicodeToAnsi(const wchar_t* pIn, int inLen, char* pOut, int outLen);
XC_API int WINAPI XC_AnsiToUnicode(const char* pIn, int inLen, wchar_t* pOut, int outLen);
XC_API LRESULT WINAPI XC_SendMessage(HWINDOW hWindow, UINT msg, WPARAM wParam, LPARAM lParam);
XC_API BOOL WINAPI XC_PostMessage(HWINDOW hWindow, UINT msg, WPARAM wParam, LPARAM lParam);
XC_API vint WINAPI XC_CallUiThread(funCallUiThread pCall, vint data);
XC_API void WINAPI XC_DebugToFileInfo(const char* pInfo);
XC_API BOOL WINAPI XC_IsHELE(HXCGUI hEle);
XC_API BOOL WINAPI XC_IsHWINDOW(HXCGUI hWindow);
XC_API BOOL WINAPI XC_IsShape(HXCGUI hShape);