库/XCGUI/XCGUI.pas


type
  // 定义一个记录类型 font_info_，用于存储字体信息
  font_info_ = record
    // 字体大小，使用 Integer 类型，单位为 pt（磅）
    nSize: Integer;
    // 字体样式，使用 Integer 类型，可能需要与之前的 fontStyle_ 枚举关联
    nStyle: Integer;
    // 字体名称，使用宽字符数组，长度为 LF_FACESIZE
    name: array[0..LF_FACESIZE - 1] of WideChar;
  end;

type
  // 定义一个枚举类型 pane_align_，表示窗格对齐方式
  pane_align_ = (
    // 错误，值为 -1
    pane_align_error = -1,
    // 左侧，值为 0
    pane_align_left = 0,
    // 顶部，由于未指定值，将自动赋值为 1
    pane_align_top,
    // 右侧，将自动赋值为 2
    pane_align_right,
    // 底部，将自动赋值为 3
    pane_align_bottom,
    // 居中，将自动赋值为 4
    pane_align_center);

type
  // 定义一个枚举类型 image_draw_type_，表示图片绘制类型
  image_draw_type_ = (
    // 默认，值为 0
    image_draw_type_default = 0,
    // 拉伸，由于未指定值，将自动赋值为 1
    image_draw_type_stretch,
    // 自适应（九宫格），将自动赋值为 2
    image_draw_type_adaptive,
    // 平铺，将自动赋值为 3
    image_draw_type_tile,
    // 固定比例，将自动赋值为 4
    image_draw_type_fixed_ratio,
    // 九宫格外围，将自动赋值为 5
    image_draw_type_adaptive_border);

type
  // 布局对齐
  layout_align_ = (
    // 左侧，值为 0
    layout_align_left = 0,
    // 顶部，将自动赋值为 1
    layout_align_top,
    // 右侧，将自动赋值为 2
    layout_align_right,
    // 底部，将自动赋值为 3
    layout_align_bottom,
    // 居中，将自动赋值为 4
    layout_align_center,
    // 等距，将自动赋值为 5
    layout_align_equidistant);

type
  // 布局大小类型
  layout_size_ = Integer;

const
  layout_size_fixed = 0;
  layout_size_fill = 1;
  layout_size_auto = 2;
  layout_size_weight = 3;
  layout_size_percent = 4;
  layout_size_disable = 5;

type
  // 布局轴对齐
  layout_align_axis_ = (
    // 无，值为 0
    layout_align_axis_auto = 0,
    // 开始，将自动赋值为 1
    layout_align_axis_start,
    // 居中，将自动赋值为 2
    layout_align_axis_center,
    // 末尾，将自动赋值为 3
    layout_align_axis_end);

type// 编辑框文本对齐
  edit_textAlign_flag_ = Integer;

const
    // 左侧，值为 $0
  edit_textAlign_flag_left = $0;
    // 右侧，值为 $1
  edit_textAlign_flag_right = $1;
    // 水平居中，值为 $2
  edit_textAlign_flag_center = $2;
    // 顶部，值为 $0
  edit_textAlign_flag_top = $0;
    // 底部，值为 $4
  edit_textAlign_flag_bottom = $4;
    // 垂直居中，值为 $8
  edit_textAlign_flag_center_v = $8;

type
  // 窗格状态
  pane_state_ = (
    // 错误，值为 -1
    pane_state_error = -1,
    // 任意，值为 0
    pane_state_any = 0,
    // 锁定，将自动赋值为 1
    pane_state_lock,
    // 停靠码头，将自动赋值为 2
    pane_state_dock,
    // 浮动窗格，将自动赋值为 3
    pane_state_float);

  // 文本对齐
  textFormatFlag_ = Integer;

const
  // 左对齐，值为 0
  textAlignFlag_left = 0;
  // 顶对齐，值为 0
  textAlignFlag_top = 0;
  // 内部保留，值为 $4000
  textAlignFlag_left_top = $4000;
  // 水平居中，值为 $1
  textAlignFlag_center = $1;
  // 右对齐，值为 $2
  textAlignFlag_right = $2;
  // 垂直居中，值为 $4
  textAlignFlag_vcenter = $4;
  // 底对齐，值为 $8
  textAlignFlag_bottom = $8;
  // 从右向左顺序显示文本，值为 $10
  textFormatFlag_DirectionRightToLeft = $10;
  // 禁止换行，值为 $20
  textFormatFlag_NoWrap = $20;
  // 垂直显示文本，值为 $40
  textFormatFlag_DirectionVertical = $40;
  // 允许部分字符延伸该字符串的布局矩形，值为 $80
  textFormatFlag_NoFitBlackBox = $80;
  // 控制字符（如从左到右标记）随具有代表性的标志符号一起显示在输出中，值为 $100
  textFormatFlag_DisplayFormatControl = $100;
  // 对于请求的字体中不支持的字符，禁用回退到可选字体，值为 $200
  textFormatFlag_NoFontFallback = $200;
  // 包括每一行结尾处的尾随空格，值为 $400
  textFormatFlag_MeasureTrailingSpaces = $400;
  // 如果内容显示高度不够一行，那么不显示，值为 $800
  textFormatFlag_LineLimit = $800;
  // 允许显示标志符号的伸出部分和延伸到边框外的未换行文本，值为 $1000
  textFormatFlag_NoClip = $1000;
  // 以字符为单位去尾，值为 $40000
  textTrimming_Character = $40000;
  // 以单词为单位去尾，值为 $80000
  textTrimming_Word = $80000;
  // 以字符为单位去尾，省略部分使用省略号表示，值为 $8000
  textTrimming_EllipsisCharacter = $8000;
  // 以单词为单位去尾，省略部分使用省略号表示，值为 $10000
  textTrimming_EllipsisWord = $10000;
  // 略去字符串中间部分，保证字符的首尾都能够显示，值为 $20000
  textTrimming_EllipsisPath = $20000;

type

  // D2D 文本渲染模式
  XC_DWRITE_RENDERING_MODE = (
    // 指定根据字体和大小自动确定呈现模式，值为 0
    XC_DWRITE_RENDERING_MODE_DEFAULT = 0,
    // 指定不执行抗锯齿，值为 1
    XC_DWRITE_RENDERING_MODE_ALIASED,
    // 使用与别名文本相同的度量指定 ClearType 呈现，值为 2
    XC_DWRITE_RENDERING_MODE_CLEARTYPE_GDI_CLASSIC,
    // 使用使用 CLEARTYPE_NATURAL_QUALITY 创建的字体，使用与使用 GDI 的文本呈现相同的指标指定 ClearType 呈现，值为 3
    XC_DWRITE_RENDERING_MODE_CLEARTYPE_GDI_NATURAL,
    // 仅在水平维度中指定具有抗锯齿功能的 ClearType 渲染，值为 4
    XC_DWRITE_RENDERING_MODE_CLEARTYPE_NATURAL,
    // 指定渲染应绕过光栅化器并直接使用轮廓，值为 6
    XC_DWRITE_RENDERING_MODE_OUTLINE);

type
  // 定义一个枚举类型 list_item_state_，表示列表项的状态

  list_item_state_ = Integer;

const
    // 项鼠标离开状态，值为 0
  list_item_state_leave = 0;
    // 项鼠标停留状态，值为 1
  list_item_state_stay = 1;
    // 项选择状态，值为 2
  list_item_state_select = 2;
    // 缓存的项，值为 3
  list_item_state_cache = 3;

type
  // 列表项模板类型
  listItemTemp_type_ = Integer;

const
    // 列表树，值为 $01
  listItemTemp_type_tree = $01;
    // 列表框，值为 $02
  listItemTemp_type_listBox = $02;
    // 列表头，值为 $04
  listItemTemp_type_list_head = $04;
    // 列表项，值为 $08
  listItemTemp_type_list_item = $08;
    // 列表视图组，值为 $10
  listItemTemp_type_listView_group = $10;
    // 列表视图项，值为 $20
  listItemTemp_type_listView_item = $20;
    // list (列表头)与(列表项)组合，值为 $0C
  listItemTemp_type_list = $0C;
    // listView (列表视组)与(列表视项)组合，值为 $30
  listItemTemp_type_listView = $30;

type
  // 定义一个枚举类型 tree_item_state_，表示列表树项的状态
  Ttree_item_state_ = (
    // 项鼠标离开状态，值为 0
    tree_item_state_leave = 0,
    // 项鼠标停留状态，值为 1
    tree_item_state_stay = 1,
    // 项选择状态，值为 2
    tree_item_state_select = 2);

  // 定义一个记录类型 listBox_item_info_，用于存储列表框项的信息
  TlistBox_item_info_ = record
    // 用户绑定数据，使用 vint 类型，可能需要根据实际情况确定 vint 的定义
    nUserData: vint;
    // 项的高度，使用 Integer 类型，-1 表示使用默认高度
    nHeight: Integer;
    // 项被选中时的高度，使用 Integer 类型，-1 表示使用默认高度
    nSelHeight: Integer;
  end;

type
  TlistBox_item_ = record
    //@别名  项索引
    index: Integer;      //项索引
    //@别名  用户数据
    nUserData: vint;     //用户绑定数据
    //@别名  项默认高度
    nHeight: Integer;    //项默认高度
    //@别名  项选中时高度
    nSelHeight: Integer; //项选中时高度
    //@别名  状态
    nState: list_item_state_;  //状态
    //@别名  项坐标
    rcItem: TRect;       //项坐标
    //@别名  布局元素
    hLayout: HELE;       //布局元素
    //@别名  项模板
    hTemp: HTEMP;        //列表项模板
  end;

type
  // 定义一个结构体 listView_item_id_，用于存储列表视图项的 ID 信息
  TlistView_item_id_ = record
    // 组索引，使用 Integer 类型
    iGroup: Integer;
    // 项索引，使用 Integer 类型
    iItem: Integer;
  end;

  // 定义一个结构体 list_item_，用于存储列表项的信息
  Tlist_item_ = record
    // 项索引（行索引），使用 Integer 类型
    index: Integer;
    // 子项索引（列索引），使用 Integer 类型
    iSubItem: Integer;
    // 用户数据，使用 vint 类型，可能需要根据实际情况确定 vint 的定义
    nUserData: vint;
    // 状态，使用 list_item_state_ 类型，需要确保该类型已经在代码中定义
    nState: list_item_state_;
    // 项的坐标，使用 TRect 类型，需要确保 TRect 类型已经在代码中定义
    rcItem: TRect;
    // 布局元素，使用 HELE 类型，需要确保该类型已经在代码中定义
    hLayout: HELE;
    // 列表项模板，使用 HTEMP 类型，需要确保该类型已经在代码中定义
    hTemp: HTEMP;
  end;

  // 定义一个结构体 list_header_item_，用于存储列表头项的信息
  Tlist_header_item_ = record
    // 项索引，使用 Integer 类型
    index: Integer;
    // 用户数据，使用 vint 类型，可能需要根据实际情况确定 vint 的定义
    nUserData: vint;
    // 是否支持排序，使用 BOOL 类型
    bSort: BOOL;
    // 排序方式，使用 Integer 类型，0 表示无效，1 表示升序，2 表示降序
    nSortType: Integer;
    // 对应数据适配器中的列索引，使用 Integer 类型
    iColumnAdapter: Integer;
    // 状态，使用 common_state3_ 类型，需要确保该类型已经在代码中定义
    nState: common_state3_;
    // 项的坐标，使用 TRect 类型，需要确保 TRect 类型已经在代码中定义
    rcItem: TRect;
    // 布局元素，使用 HELE 类型，需要确保该类型已经在代码中定义
    hLayout: HELE;
    // 列表项模板，使用 HTEMP 类型，需要确保该类型已经在代码中定义
    hTemp: HTEMP;
  end;

  // 定义一个结构体 tree_item_，用于存储树项的信息
  Ttree_item_ = record
    // 项 ID，使用 Integer 类型
    nID: Integer;
    // 深度，使用 Integer 类型
    nDepth: Integer;
    // 项的高度，使用 Integer 类型
    nHeight: Integer;
    // 项选中时的高度，使用 Integer 类型
    nSelHeight: Integer;
    // 用户数据，使用 vint 类型，可能需要根据实际情况确定 vint 的定义
    nUserData: vint;
    // 是否展开，使用 BOOL 类型
    bExpand: BOOL;
    // 状态，使用 tree_item_state_ 类型，需要确保该类型已经在代码中定义
    nState: Ttree_item_state_;
    // 项的坐标，使用 TRect 类型，需要确保 TRect 类型已经代码中定义
    rcItem: TRect;
    // 布局元素，使用 HELE 类型，需要确保该类型已经在代码中定义
    hLayout: HELE;
    // 列表项模板，使用 HTEMP 类型，需要确保该类型已经在代码中定义
    hTemp: HTEMP;
  end;

  // 定义一个结构体 listView_item_，用于存储列表视图项的信息
  TlistView_item_ = record
    // 项所属组索引，-1 表示没有组，使用 Integer 类型
    iGroup: Integer;
    // 项在组中的位置索引，如果为 -1 则为组，使用 Integer 类型
    iItem: Integer;
    // 用户绑定数据，使用 vint 类型，可能需要根据实际情况确定 vint 的定义
    nUserData: vint;
    // 状态，使用 list_item_state_ 类型，需要确保该类型已经在代码中定义
    nState: list_item_state_;
    // 项的坐标，使用 TRect 类型，需要确保 TRect 类型已经在代码中定义
    rcItem: TRect;
    // 布局元素，使用 HELE 类型，需要确保该类型已经在代码中定义
    hLayout: HELE;
    // 列表项模板，使用 HTEMP 类型，需要确保该类型已经在代码中定义
    hTemp: HTEMP;
  end;

type
  // 定义一个枚举类型 menu_popup_position_，表示弹出菜单的方向
  Tmenu_popup_position_ = Integer;

const
    // 左上角，值为 0
  menu_popup_position_left_top = 0;
    // 左下角，将自动赋值为 1
  menu_popup_position_left_bottom = 1;
    // 右上角，将自动赋值为 2
  menu_popup_position_right_top = 2;
    // 右下角，将自动赋值为 3
  menu_popup_position_right_bottom = 3;
    // 左居中，将自动赋值为 4
  menu_popup_position_center_left = 4;
    // 上居中，将自动赋值为 5
  menu_popup_position_center_top = 5;
    // 右居中，将自动赋值为 6
  menu_popup_position_center_right = 6;
    // 下居中，将自动 赋值为 7
  menu_popup_position_center_bottom = 7;

type
  menu_item_flag_ = Integer;

const
  menu_item_flag_Normal = $00;  // 正常
  menu_item_flag_Select = $01;  // 选择或鼠标停留
  menu_item_flag_Stay = $01;  // 选择或鼠标停留 等于 mifSelect
  menu_item_flag_Check = $02;  // 勾选
  menu_item_flag_Popup = $04;  // 弹出
  menu_item_flag_Separator = $08;  // 分隔栏 ID号任意,ID号被忽略
  menu_item_flag_Disable = $10;  // 禁用

type
  messageBox_flag_ = (
    // @别名  其他
    messageBox_flag_other = $00,  // 其他
    // @别名  确定按钮
    messageBox_flag_ok = $01,    // 确定按钮
    // @别名  取消按钮
    messageBox_flag_cancel = $02, // 取消按钮
    // @别名  图标应用程序
    messageBox_flag_icon_appicon = $01000, // 图标 应用程序  IDI_APPLICATION
    // @别名  图标信息
    messageBox_flag_icon_info = $02000,  // 图标 信息     IDI_ASTERISK
    // @别名  图标问询
    messageBox_flag_icon_question = $04000, // 图标 问询/帮助/提问   IDI_QUESTION
    // @别名  图标错误
    messageBox_flag_icon_error = $08000,  // 图标 错误/拒绝/禁止  IDI_ERROR
    // @别名  图标警告
    messageBox_flag_icon_warning = $10000, // 图标 警告       IDI_WARNING
    // @别名  图标安全
    messageBox_flag_icon_shield = $20000  // 图标 盾牌/安全   IDI_SHIELD
  );

type
  notifyMsg_skin_ = (
    // @别名  默认
    notifyMsg_skin_no,         // 默认
    // @别名  成功
    notifyMsg_skin_success,    // 成功
    // @别名  警告
    notifyMsg_skin_warning,    // 警告
    // @别名  消息
    notifyMsg_skin_message,   // 消息
    // @别名  错误
    notifyMsg_skin_error     // 错误
  );

type
  monthCal_button_type_ = Integer;

const
  monthCal_button_type_today = 0;
  monthCal_button_type_last_year = 1;
  monthCal_button_type_next_year = 2;
  monthCal_button_type_last_month = 3;
  monthCal_button_type_next_month = 4;
  monthCal_state_flag_leave = element_state_flag_leave;
  monthCal_state_flag_item_leave = $0080;
  monthCal_state_flag_item_stay = $0100;
  monthCal_state_flag_item_down = $0200;
  monthCal_state_flag_item_select = $0400;
  monthCal_state_flag_item_select_no = $0800;
  monthCal_state_flag_item_today = $1000;
  monthCal_state_flag_item_last_month = $2000;
  monthCal_state_flag_item_cur_month = $4000;
  monthCal_state_flag_item_next_month = $8000;

function XC_UnicodeToAnsi(pIn: PWideChar; inLen: Integer; pOut: PAnsiChar; outLen: Integer): Integer; stdcall; external XCGUI_DLL;

function XC_AnsiToUnicode(pIn: PAnsiChar; inLen: Integer; pOut: PWideChar; outLen: Integer): Integer; stdcall; external XCGUI_DLL;

function XC_SendMessage(hWindow: HWINDOW; msg: UINT; wParam: WPARAM; lParam: LPARAM): LRESULT; stdcall; external XCGUI_DLL;

function XC_PostMessage(hWindow: HWINDOW; msg: UINT; wParam: WPARAM; lParam: LPARAM): BOOL; stdcall; external XCGUI_DLL;

function XC_CallUiThread(pCall: vint; data: vint): vint; stdcall; external XCGUI_DLL;

procedure XC_DebugToFileInfo(pInfo: PAnsiChar); stdcall; external XCGUI_DLL;

function XC_IsHELE(hEle: HXCGUI): BOOL; stdcall; external XCGUI_DLL;

function XC_IsHWINDOW(hWindow: HXCGUI): BOOL; stdcall; external XCGUI_DLL;

function XC_IsShape(hShape: HXCGUI): BOOL; stdcall; external XCGUI_DLL;
